# chess

./: Cargo.toml  README.md
.claude/: settings.json
src/: board.rs  chess_initializer.rs  coordinate_utils.rs  game.rs  input.rs  main.rs  moves.rs  promotion.rs  rules.rs  sound.rs  theme.rs
src/board/: game_board.rs  mod.rs
src/chess_pieces/: mod.rs  piece_sprites.rs  pieces.rs
src/debug/: draw_debug.rs
src/input/: highlight.rs  indicators.rs  mod.rs  mouse.rs  selection.rs
src/utils/: coordinate_utils.rs  mod.rs
