[package]
name = "chess"
version = "0.1.0"
edition = "2024"

# Remove dynamic linking for the release profile to improve performance.
[dependencies]
bevy = { version = "0.18.1", features = ["dynamic_linking"] }


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
